--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php": "^7.0",
-        "league/oauth2-client": "^2.2"
+        "league/oauth2-client": "2.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0"
