--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,12 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: php-actions/composer@v5
+        with:
+          php_version: 7.0
 
       - name: PHPUnit Tests
         uses: php-actions/phpunit@v2
         with:
+          php_version: 7.0
           bootstrap: vendor/autoload.php
           args: --coverage-text
