--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,16 +6,20 @@ jobs:
   run-phpunit:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        php: [7.0, 7.1, 7.2, 7.3, 8.0]
+
     steps:
       - uses: actions/checkout@v2
 
       - uses: php-actions/composer@v5
         with:
-          php_version: 7.0
+          php_version: ${{ matrix.php }}
 
       - name: PHPUnit Tests
         uses: php-actions/phpunit@v2
         with:
-          php_version: 7.0
+          php_version: ${{ matrix.php }}
           bootstrap: vendor/autoload.php
           args: --coverage-text
