--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
       - name: PHPUnit Tests
         uses: php-actions/phpunit@v2
         with:
+          version: 6
           php_version: ${{ matrix.php }}
           bootstrap: vendor/autoload.php
           args: --coverage-text
