--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
         "chatwork"
     ],
     "require": {
-        "php": "^7.0",
+        "php": "^7.0 || ^8.0",
         "league/oauth2-client": ">=2.2.0 <2.4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "^6.0 || ^9.0 || ^10.0"
     },
     "autoload": {
         "psr-4": {
