--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "league/oauth2-client": ">=2.2.0 <2.4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0 || ^9.0 || ^10.0"
+        "phpunit/phpunit": "^6.0 || ^9.0"
     },
     "autoload": {
         "psr-4": {
