--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,9 @@ jobs:
 
     strategy:
       matrix:
-        php: [7.0, 7.1, 7.2, 7.3, 7.4]
+        php: [7.0, 7.1, 7.2, 7.3, 7.4, 8.0, 8.1, 8.2]
+        phpunit: [9]
+        composer: [2]
         include:
           - php: 7.0
             phpunit: 6
@@ -18,13 +20,6 @@ jobs:
             composer: 2.2
           - php: 7.2
             phpunit: 6
-            composer: 2
-          - php: 7.3
-            phpunit: 9
-            composer: 2
-          - php: 7.4
-            phpunit: 9
-            composer: 2
 
     steps:
       - uses: actions/checkout@v3
