--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php": "^7.0 || ^8.0",
-        "league/oauth2-client": ">=2.2.0 <2.4.0"
+        "league/oauth2-client": "^2.6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0 || ^9.0"
