--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "league/oauth2-client": "^2.7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0 || ^9.0"
+        "phpunit/phpunit": "^6.0 || ^9.0",
+        "phpstan/phpstan": "^1.10"
     },
     "autoload": {
         "psr-4": {
