--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=eiel_oauth2-chatwork-php
 sonar.organization=eiel
+sonar.php.coverage.reportPaths=coverage.xml
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=oauth2-chatwork-php
