chore: setup SonarCloud
see
- https://sonarcloud.io/project/configuration?id=chatwork_oauth2-chatwork-php&analysisMode=GitHubActions
- https://docs.sonarcloud.io/enriching/test-coverage/php-test-coverage/
- https://github.com/shivammathur/setup-php

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -21,6 +21,7 @@
             <directory suffix=".php">./</directory>
             <exclude>
                 <directory>./tests</directory>
+                <directory>./vendor/</directory>
             </exclude>
         </whitelist>
     </filter>
